in dist: fixed appearance of add menu so that the bottom elements aren't cutoff.

--- a/css/seeit3.css
+++ b/css/seeit3.css
@@ -41,7 +41,7 @@ table#menuItems h3 {
 	background: #ffffff;
 	border:1px solid black;
 	padding: 5px;
-	max-height: 400px;
+	max-height: 500px;
   overflow:scroll;
   overflow-x: hidden;
   -ms-overflow-x: hidden;
